samples/_failures_safe/1761281054_802afd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55cc6009.c: In function ‘main’:
./samples/SAFE/__tmp_55cc6009.c:162:9: error: expected expression at end of input
  162 |         if (
      |         ^~
./samples/SAFE/__tmp_55cc6009.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55cc6009.c:162:9: error: expected declaration or statement at end of input
